# PythonProjects

DeepLearning/: .gitignore  README.md  data_loader.py  inference.py  model.py  requirements.txt  train.py
codereview/: .gitignore  README.md  pyproject.toml
codereview/output/: design_review.md  feedback.md  syntax_check.md
codereview/src/codereview/: App.java  crew.py  main.py
codereview/src/codereview/config/: agents.yaml  tasks.yaml
fraud_api/: .gitignore  README.md  fraud_api.py  inference.py  requirements.txt  train_tabnet.py
fraud_api/loaders/: kaggle_loader.py
triage/: README.md  pyproject.toml
triage/output/: assign_severity.txt  classify_defect.txt  route_to_owner.txt  triage_summary.txt
triage/src/triage/: bug_report.txt  crew.py  log_data.txt  main.py
triage/src/triage/config/: agents.yaml  tasks.yaml  tools.yaml
triage/src/triage/tools/: exception_tools.py  log_parser.py
triage/tests/: test_triage.py
triage_mcp/: .gitignore  Dockerfile  README.md  logs.txt  pyproject.toml  requirements.txt
triage_mcp/src/triage_mcp/: bug_report_2.txt  main.py
triage_mcp/src/triage_mcp/servers/: mcp_server.py
