[project]
name = "triage"
version = "0.1.0"
description = "Triage using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
triage = "triage.main:run"
run_crew = "triage.main:run"
train = "triage.main:train"
replay = "triage.main:replay"
test = "triage.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
